tpc.output
Terminaux inutilisés dans la grammaire

   MAIN


État 98 conflits: 5 décalage/réduction
État 99 conflits: 5 décalage/réduction
État 118 conflits: 5 décalage/réduction
État 119 conflits: 5 décalage/réduction
État 120 conflits: 5 décalage/réduction
État 121 conflits: 5 décalage/réduction
État 128 conflits: 1 décalage/réduction
État 139 conflits: 5 décalage/réduction


Grammaire

    0 $accept: Prog $end

    1 Prog: DeclConsts DeclVars DeclFoncts

    2 DeclConsts: DeclConsts CONST ListConst PV
    3           | %empty

    4 ListConst: ListConst VRG IDENT EGAL Litteral
    5          | IDENT EGAL Litteral

    6 Litteral: NombreSigne
    7         | CARACTERE

    8 NombreSigne: NUM
    9            | ADDSUB NUM

   10 DeclVars: DeclVars TYPE Declarateurs PV
   11         | %empty

   12 Declarateurs: Declarateurs VRG Declarateur
   13             | Declarateur

   14 Declarateur: IDENT
   15            | IDENT LSQB NUM RSQB

   16 DeclFoncts: DeclFoncts DeclFonct
   17           | DeclFonct

   18 DeclFonct: EnTeteFonct Corps

   19 EnTeteFonct: TYPE IDENT LPAR Parametres RPAR
   20            | VOID IDENT LPAR Parametres RPAR

   21 Parametres: VOID
   22           | ListTypVar

   23 ListTypVar: ListTypVar VRG TYPE IDENT
   24           | TYPE IDENT

   25 Corps: LCUR DeclConsts DeclVars SuiteInstr RCUR

   26 SuiteInstr: SuiteInstr Instr
   27           | %empty

   28 Instr: LValue EGAL Exp PV
   29      | IF LPAR Exp RPAR Instr
   30      | IF LPAR Exp RPAR Instr ELSE Instr
   31      | WHILE LPAR Exp RPAR Instr
   32      | RETURN Exp PV
   33      | RETURN PV
   34      | IDENT LPAR Arguments RPAR PV
   35      | READ LPAR IDENT RPAR PV
   36      | READCH LPAR IDENT RPAR PV
   37      | PRINT LPAR Exp RPAR PV
   38      | PV
   39      | Bloc

   40 Bloc: LCUR SuiteInstr RCUR

   41 Arguments: ListExp
   42          | %empty

   43 ListExp: ListExp VRG Exp
   44        | Exp

   45 Exp: Exp ADDSUB Exp
   46    | Exp DIVSTAR Exp
   47    | Exp COMP Exp
   48    | ADDSUB Exp
   49    | Exp BOPE Exp
   50    | NEGATION Exp
   51    | LPAR Exp RPAR
   52    | LValue
   53    | NUM
   54    | CARACTERE
   55    | Exp IF LPAR Exp RPAR ELSE Exp
   56    | IDENT LPAR Arguments RPAR

   57 LValue: IDENT
   58       | IDENT LSQB Exp RSQB


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 4 5 28
PV (259) 2 10 28 32 33 34 35 36 37 38
VRG (260) 4 12 23 43
LPAR (261) 19 20 29 30 31 34 35 36 37 51 55 56
RPAR (262) 19 20 29 30 31 34 35 36 37 51 55 56
LCUR (263) 25 40
RCUR (264) 25 40
LSQB (265) 15 58
RSQB (266) 15 58
IDENT (267) 4 5 14 15 19 20 23 24 34 35 36 56 57 58
IF (268) 29 30 55
ELSE (269) 30 55
WHILE (270) 31
RETURN (271) 32 33
PRINT (272) 37
READ (273) 35
READCH (274) 36
CONST (275) 2
MAIN (276)
VOID (277) 20 21
NEGATION (278) 50
TYPE (279) 10 19 23 24
NUM (280) 8 9 15 53
CARACTERE (281) 7 54
ADDSUB (282) 9 45 48
DIVSTAR (283) 46
COMP (284) 47
BOPE (285) 49


Non-terminaux, suivis des règles où ils apparaissent

$accept (31)
    à gauche: 0
Prog (32)
    à gauche: 1, à droite: 0
DeclConsts (33)
    à gauche: 2 3, à droite: 1 2 25
ListConst (34)
    à gauche: 4 5, à droite: 2 4
Litteral (35)
    à gauche: 6 7, à droite: 4 5
NombreSigne (36)
    à gauche: 8 9, à droite: 6
DeclVars (37)
    à gauche: 10 11, à droite: 1 10 25
Declarateurs (38)
    à gauche: 12 13, à droite: 10 12
Declarateur (39)
    à gauche: 14 15, à droite: 12 13
DeclFoncts (40)
    à gauche: 16 17, à droite: 1 16
DeclFonct (41)
    à gauche: 18, à droite: 16 17
EnTeteFonct (42)
    à gauche: 19 20, à droite: 18
Parametres (43)
    à gauche: 21 22, à droite: 19 20
ListTypVar (44)
    à gauche: 23 24, à droite: 22 23
Corps (45)
    à gauche: 25, à droite: 18
SuiteInstr (46)
    à gauche: 26 27, à droite: 25 26 40
Instr (47)
    à gauche: 28 29 30 31 32 33 34 35 36 37 38 39, à droite: 26 29
    30 31
Bloc (48)
    à gauche: 40, à droite: 39
Arguments (49)
    à gauche: 41 42, à droite: 34 56
ListExp (50)
    à gauche: 43 44, à droite: 41 43
Exp (51)
    à gauche: 45 46 47 48 49 50 51 52 53 54 55 56, à droite: 28 29
    30 31 32 37 43 44 45 46 47 48 49 50 51 55 58
LValue (52)
    à gauche: 57 58, à droite: 28 52


État 0

    0 $accept: . Prog $end

    $défaut  réduction par utilisation de la règle 3 (DeclConsts)

    Prog        aller à l'état 1
    DeclConsts  aller à l'état 2


État 1

    0 $accept: Prog . $end

    $end  décalage et aller à l'état 3


État 2

    1 Prog: DeclConsts . DeclVars DeclFoncts
    2 DeclConsts: DeclConsts . CONST ListConst PV

    CONST  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 11 (DeclVars)

    DeclVars  aller à l'état 5


État 3

    0 $accept: Prog $end .

    $défaut  accepter


État 4

    2 DeclConsts: DeclConsts CONST . ListConst PV

    IDENT  décalage et aller à l'état 6

    ListConst  aller à l'état 7


État 5

    1 Prog: DeclConsts DeclVars . DeclFoncts
   10 DeclVars: DeclVars . TYPE Declarateurs PV

    VOID  décalage et aller à l'état 8
    TYPE  décalage et aller à l'état 9

    DeclFoncts   aller à l'état 10
    DeclFonct    aller à l'état 11
    EnTeteFonct  aller à l'état 12


État 6

    5 ListConst: IDENT . EGAL Litteral

    EGAL  décalage et aller à l'état 13


État 7

    2 DeclConsts: DeclConsts CONST ListConst . PV
    4 ListConst: ListConst . VRG IDENT EGAL Litteral

    PV   décalage et aller à l'état 14
    VRG  décalage et aller à l'état 15


État 8

   20 EnTeteFonct: VOID . IDENT LPAR Parametres RPAR

    IDENT  décalage et aller à l'état 16


État 9

   10 DeclVars: DeclVars TYPE . Declarateurs PV
   19 EnTeteFonct: TYPE . IDENT LPAR Parametres RPAR

    IDENT  décalage et aller à l'état 17

    Declarateurs  aller à l'état 18
    Declarateur   aller à l'état 19


État 10

    1 Prog: DeclConsts DeclVars DeclFoncts .
   16 DeclFoncts: DeclFoncts . DeclFonct

    VOID  décalage et aller à l'état 8
    TYPE  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 1 (Prog)

    DeclFonct    aller à l'état 21
    EnTeteFonct  aller à l'état 12


État 11

   17 DeclFoncts: DeclFonct .

    $défaut  réduction par utilisation de la règle 17 (DeclFoncts)


État 12

   18 DeclFonct: EnTeteFonct . Corps

    LCUR  décalage et aller à l'état 22

    Corps  aller à l'état 23


État 13

    5 ListConst: IDENT EGAL . Litteral

    NUM        décalage et aller à l'état 24
    CARACTERE  décalage et aller à l'état 25
    ADDSUB     décalage et aller à l'état 26

    Litteral     aller à l'état 27
    NombreSigne  aller à l'état 28


État 14

    2 DeclConsts: DeclConsts CONST ListConst PV .

    $défaut  réduction par utilisation de la règle 2 (DeclConsts)


État 15

    4 ListConst: ListConst VRG . IDENT EGAL Litteral

    IDENT  décalage et aller à l'état 29


État 16

   20 EnTeteFonct: VOID IDENT . LPAR Parametres RPAR

    LPAR  décalage et aller à l'état 30


État 17

   14 Declarateur: IDENT .
   15            | IDENT . LSQB NUM RSQB
   19 EnTeteFonct: TYPE IDENT . LPAR Parametres RPAR

    LPAR  décalage et aller à l'état 31
    LSQB  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 14 (Declarateur)


État 18

   10 DeclVars: DeclVars TYPE Declarateurs . PV
   12 Declarateurs: Declarateurs . VRG Declarateur

    PV   décalage et aller à l'état 33
    VRG  décalage et aller à l'état 34


État 19

   13 Declarateurs: Declarateur .

    $défaut  réduction par utilisation de la règle 13 (Declarateurs)


État 20

   19 EnTeteFonct: TYPE . IDENT LPAR Parametres RPAR

    IDENT  décalage et aller à l'état 35


État 21

   16 DeclFoncts: DeclFoncts DeclFonct .

    $défaut  réduction par utilisation de la règle 16 (DeclFoncts)


État 22

   25 Corps: LCUR . DeclConsts DeclVars SuiteInstr RCUR

    $défaut  réduction par utilisation de la règle 3 (DeclConsts)

    DeclConsts  aller à l'état 36


État 23

   18 DeclFonct: EnTeteFonct Corps .

    $défaut  réduction par utilisation de la règle 18 (DeclFonct)


État 24

    8 NombreSigne: NUM .

    $défaut  réduction par utilisation de la règle 8 (NombreSigne)


État 25

    7 Litteral: CARACTERE .

    $défaut  réduction par utilisation de la règle 7 (Litteral)


État 26

    9 NombreSigne: ADDSUB . NUM

    NUM  décalage et aller à l'état 37


État 27

    5 ListConst: IDENT EGAL Litteral .

    $défaut  réduction par utilisation de la règle 5 (ListConst)


État 28

    6 Litteral: NombreSigne .

    $défaut  réduction par utilisation de la règle 6 (Litteral)


État 29

    4 ListConst: ListConst VRG IDENT . EGAL Litteral

    EGAL  décalage et aller à l'état 38


État 30

   20 EnTeteFonct: VOID IDENT LPAR . Parametres RPAR

    VOID  décalage et aller à l'état 39
    TYPE  décalage et aller à l'état 40

    Parametres  aller à l'état 41
    ListTypVar  aller à l'état 42


État 31

   19 EnTeteFonct: TYPE IDENT LPAR . Parametres RPAR

    VOID  décalage et aller à l'état 39
    TYPE  décalage et aller à l'état 40

    Parametres  aller à l'état 43
    ListTypVar  aller à l'état 42


État 32

   15 Declarateur: IDENT LSQB . NUM RSQB

    NUM  décalage et aller à l'état 44


État 33

   10 DeclVars: DeclVars TYPE Declarateurs PV .

    $défaut  réduction par utilisation de la règle 10 (DeclVars)


État 34

   12 Declarateurs: Declarateurs VRG . Declarateur

    IDENT  décalage et aller à l'état 45

    Declarateur  aller à l'état 46


État 35

   19 EnTeteFonct: TYPE IDENT . LPAR Parametres RPAR

    LPAR  décalage et aller à l'état 31


État 36

    2 DeclConsts: DeclConsts . CONST ListConst PV
   25 Corps: LCUR DeclConsts . DeclVars SuiteInstr RCUR

    CONST  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 11 (DeclVars)

    DeclVars  aller à l'état 47


État 37

    9 NombreSigne: ADDSUB NUM .

    $défaut  réduction par utilisation de la règle 9 (NombreSigne)


État 38

    4 ListConst: ListConst VRG IDENT EGAL . Litteral

    NUM        décalage et aller à l'état 24
    CARACTERE  décalage et aller à l'état 25
    ADDSUB     décalage et aller à l'état 26

    Litteral     aller à l'état 48
    NombreSigne  aller à l'état 28


État 39

   21 Parametres: VOID .

    $défaut  réduction par utilisation de la règle 21 (Parametres)


État 40

   24 ListTypVar: TYPE . IDENT

    IDENT  décalage et aller à l'état 49


État 41

   20 EnTeteFonct: VOID IDENT LPAR Parametres . RPAR

    RPAR  décalage et aller à l'état 50


État 42

   22 Parametres: ListTypVar .
   23 ListTypVar: ListTypVar . VRG TYPE IDENT

    VRG  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 22 (Parametres)


État 43

   19 EnTeteFonct: TYPE IDENT LPAR Parametres . RPAR

    RPAR  décalage et aller à l'état 52


État 44

   15 Declarateur: IDENT LSQB NUM . RSQB

    RSQB  décalage et aller à l'état 53


État 45

   14 Declarateur: IDENT .
   15            | IDENT . LSQB NUM RSQB

    LSQB  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 14 (Declarateur)


État 46

   12 Declarateurs: Declarateurs VRG Declarateur .

    $défaut  réduction par utilisation de la règle 12 (Declarateurs)


État 47

   10 DeclVars: DeclVars . TYPE Declarateurs PV
   25 Corps: LCUR DeclConsts DeclVars . SuiteInstr RCUR

    TYPE  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 27 (SuiteInstr)

    SuiteInstr  aller à l'état 55


État 48

    4 ListConst: ListConst VRG IDENT EGAL Litteral .

    $défaut  réduction par utilisation de la règle 4 (ListConst)


État 49

   24 ListTypVar: TYPE IDENT .

    $défaut  réduction par utilisation de la règle 24 (ListTypVar)


État 50

   20 EnTeteFonct: VOID IDENT LPAR Parametres RPAR .

    $défaut  réduction par utilisation de la règle 20 (EnTeteFonct)


État 51

   23 ListTypVar: ListTypVar VRG . TYPE IDENT

    TYPE  décalage et aller à l'état 56


État 52

   19 EnTeteFonct: TYPE IDENT LPAR Parametres RPAR .

    $défaut  réduction par utilisation de la règle 19 (EnTeteFonct)


État 53

   15 Declarateur: IDENT LSQB NUM RSQB .

    $défaut  réduction par utilisation de la règle 15 (Declarateur)


État 54

   10 DeclVars: DeclVars TYPE . Declarateurs PV

    IDENT  décalage et aller à l'état 45

    Declarateurs  aller à l'état 18
    Declarateur   aller à l'état 19


État 55

   25 Corps: LCUR DeclConsts DeclVars SuiteInstr . RCUR
   26 SuiteInstr: SuiteInstr . Instr

    PV      décalage et aller à l'état 57
    LCUR    décalage et aller à l'état 58
    RCUR    décalage et aller à l'état 59
    IDENT   décalage et aller à l'état 60
    IF      décalage et aller à l'état 61
    WHILE   décalage et aller à l'état 62
    RETURN  décalage et aller à l'état 63
    PRINT   décalage et aller à l'état 64
    READ    décalage et aller à l'état 65
    READCH  décalage et aller à l'état 66

    Instr   aller à l'état 67
    Bloc    aller à l'état 68
    LValue  aller à l'état 69


État 56

   23 ListTypVar: ListTypVar VRG TYPE . IDENT

    IDENT  décalage et aller à l'état 70


État 57

   38 Instr: PV .

    $défaut  réduction par utilisation de la règle 38 (Instr)


État 58

   40 Bloc: LCUR . SuiteInstr RCUR

    $défaut  réduction par utilisation de la règle 27 (SuiteInstr)

    SuiteInstr  aller à l'état 71


État 59

   25 Corps: LCUR DeclConsts DeclVars SuiteInstr RCUR .

    $défaut  réduction par utilisation de la règle 25 (Corps)


État 60

   34 Instr: IDENT . LPAR Arguments RPAR PV
   57 LValue: IDENT .
   58       | IDENT . LSQB Exp RSQB

    LPAR  décalage et aller à l'état 72
    LSQB  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 57 (LValue)


État 61

   29 Instr: IF . LPAR Exp RPAR Instr
   30      | IF . LPAR Exp RPAR Instr ELSE Instr

    LPAR  décalage et aller à l'état 74


État 62

   31 Instr: WHILE . LPAR Exp RPAR Instr

    LPAR  décalage et aller à l'état 75


État 63

   32 Instr: RETURN . Exp PV
   33      | RETURN . PV

    PV         décalage et aller à l'état 76
    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    Exp     aller à l'état 83
    LValue  aller à l'état 84


État 64

   37 Instr: PRINT . LPAR Exp RPAR PV

    LPAR  décalage et aller à l'état 85


État 65

   35 Instr: READ . LPAR IDENT RPAR PV

    LPAR  décalage et aller à l'état 86


État 66

   36 Instr: READCH . LPAR IDENT RPAR PV

    LPAR  décalage et aller à l'état 87


État 67

   26 SuiteInstr: SuiteInstr Instr .

    $défaut  réduction par utilisation de la règle 26 (SuiteInstr)


État 68

   39 Instr: Bloc .

    $défaut  réduction par utilisation de la règle 39 (Instr)


État 69

   28 Instr: LValue . EGAL Exp PV

    EGAL  décalage et aller à l'état 88


État 70

   23 ListTypVar: ListTypVar VRG TYPE IDENT .

    $défaut  réduction par utilisation de la règle 23 (ListTypVar)


État 71

   26 SuiteInstr: SuiteInstr . Instr
   40 Bloc: LCUR SuiteInstr . RCUR

    PV      décalage et aller à l'état 57
    LCUR    décalage et aller à l'état 58
    RCUR    décalage et aller à l'état 89
    IDENT   décalage et aller à l'état 60
    IF      décalage et aller à l'état 61
    WHILE   décalage et aller à l'état 62
    RETURN  décalage et aller à l'état 63
    PRINT   décalage et aller à l'état 64
    READ    décalage et aller à l'état 65
    READCH  décalage et aller à l'état 66

    Instr   aller à l'état 67
    Bloc    aller à l'état 68
    LValue  aller à l'état 69


État 72

   34 Instr: IDENT LPAR . Arguments RPAR PV

    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 42 (Arguments)

    Arguments  aller à l'état 90
    ListExp    aller à l'état 91
    Exp        aller à l'état 92
    LValue     aller à l'état 84


État 73

   58 LValue: IDENT LSQB . Exp RSQB

    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    Exp     aller à l'état 93
    LValue  aller à l'état 84


État 74

   29 Instr: IF LPAR . Exp RPAR Instr
   30      | IF LPAR . Exp RPAR Instr ELSE Instr

    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    Exp     aller à l'état 94
    LValue  aller à l'état 84


État 75

   31 Instr: WHILE LPAR . Exp RPAR Instr

    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    Exp     aller à l'état 95
    LValue  aller à l'état 84


État 76

   33 Instr: RETURN PV .

    $défaut  réduction par utilisation de la règle 33 (Instr)


État 77

   51 Exp: LPAR . Exp RPAR

    LPAR       décalage et aller à l'état 77
    IDENT      décalage et aller à l'état 78
    NEGATION   décalage et aller à l'état 79
    NUM        décalage et aller à l'état 80
    CARACTERE  décalage et aller à l'état 81
    ADDSUB     décalage et aller à l'état 82

    Exp     aller à l'état 96
    LValue  aller à l'état 84


État 78

   56 Exp: IDENT . LPAR Arguments RPAR
   57 LValue: IDENT .
   58       | IDENT . LSQB Exp RSQB

    LPAR  décalage et aller à l'état 97
    LSQB  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 57 (LValue)


État 79

   50 Exp: NEGATION . Exp
